--- a/src/routes/style.scss
+++ b/src/routes/style.scss
@@ -1,32 +1,33 @@
+h1,
+figure,
+p {
+  margin: 0 auto;
+  text-align: center;
+}
 
-	h1, figure, p {
-		text-align: center;
-		margin: 0 auto;
-	}
+h1 {
+  margin: 0 0 0.5em 0;
+  font-size: 2.8em;
+  font-weight: 700;
+  text-transform: uppercase;
+}
 
-	h1 {
-		font-size: 2.8em;
-		text-transform: uppercase;
-		font-weight: 700;
-		margin: 0 0 0.5em 0;
-	}
+figure {
+  margin: 0 0 1em 0;
+}
 
-	figure {
-		margin: 0 0 1em 0;
-	}
+img {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 0 1em 0;
+}
 
-	img {
-		width: 100%;
-		max-width: 400px;
-		margin: 0 0 1em 0;
-	}
+p {
+  margin: 1em auto;
+}
 
-	p {
-		margin: 1em auto;
-	}
-
-	@media (min-width: 480px) {
-		h1 {
-			font-size: 4em;
-		}
-	}
+@media (min-width: 480px) {
+  h1 {
+    font-size: 4em;
+  }
+}
